--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"dotenv": "^16.4.5",
+		"kit-monorepo": "github:sveltejs/kit"
+	}
 }
